--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.1.2",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "cookie": "^0.4.1",
     "framer-motion": "^3.1.4",
     "js-cookie": "^2.2.1",
     "next": "10.0.5",
