--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cookie": "^0.4.1",
     "framer-motion": "^3.1.4",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-qr-scanner": "^1.0.0-alpha.7"
   }
 }
