--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.1.2",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "barcode-react-scanner": "^1.2.0",
     "cookie": "^0.4.1",
     "framer-motion": "^3.1.4",
     "js-cookie": "^2.2.1",
@@ -19,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "react-qr-scanner": "^1.0.0-alpha.7"
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-select": "^4.3.1"
   }
 }
