--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "moment": "^2.29.1",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-countup": "^5.2.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-qr-barcode-scanner": "^1.0.6",
-    "react-select": "^4.3.1"
+    "react-redux": "^7.2.4",
+    "react-select": "^4.3.1",
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.2.0"
   }
 }
