--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-redux": "^7.2.4",
     "react-select": "^4.3.1",
     "redux": "^4.1.1",
-    "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.2.0"
+    "redux-persist": "^6.0.0"
   }
 }
